--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "TestProjekt"
+name = "Snake"
 version = "0.1.0"
 authors = ["Szymon <wieczorek0725@gmail.com>"]
 edition = "2018"
